<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/nombre"
                android:hint="@string/nombre"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/nombre_size"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/set"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/data"/>

    </LinearLayout>

        <DatePicker
            android:id="@+id/dpPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center_horizontal">

        </DatePicker>

        <Button
            android:id="@+id/btSelectFecha"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="@dimen/boton_select_size"
            android:text="@string/ok"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/fecha"
            android:hint="@string/fecha"
            android:inputType="date"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="@dimen/nombre_size"
            android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/telefono"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/nombre_size"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="@dimen/nombre_size"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/descripcion"
                android:hint="@string/descripcion"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="3"
                android:textSize="@dimen/nombre_size"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btConfirmarDatos"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/top"
            android:textColor="@android:color/white"
            android:textSize="@dimen/nombre_size"
            android:text="@string/enviar"
            android:background="@color/colorPrimary">

        </Button>


</LinearLayout>